--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "generate": "prisma generate",
+    "migrate": "npx prisma migrate dev"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
